Read connection string from appsettings.json in OnConfiguring method

--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,10 @@
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
-[Bb]in/
-[Oo]bj/
+# Ignore build outputs
+**/bin/
+**/obj/
+
 
 # Mono auto generated files
 mono_crash.*
