Implement JWT-based Authorization to secure API endpoints

--- a/RestaurantReservation.API/appsettings.json
+++ b/RestaurantReservation.API/appsettings.json
@@ -8,5 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Key": "FoothillSolutions__--WWWFFF@@3**v",
+    "Issuer": "RestaurantReservation.API",
+    "Audience": "RestaurantReservation.Client"
+  },
   "AllowedHosts": "*"
 }
